# cpl-dsl-projekt

./: DSL_Manual_Aufgabenerstellungsgrammatik.md  Guide_AntlrToIr.md  IR_Klassendiagramm.drawio  Protokoll.md  README.md
Aufgabenerstellungsgrammatik/: CMakeLists.txt
Aufgabenerstellungsgrammatik/grammar/: Aufgabenerstellungsgrammatik.g4
Aufgabenerstellungsgrammatik/perf/: examples.txt  fail_share.ps1  gen_perf_inputs.ps1  out.txt  run_perf.ps1
Aufgabenerstellungsgrammatik/results/: aufgaben_example_ir.json
Aufgabenerstellungsgrammatik/src/: main.cpp
Aufgabenerstellungsgrammatik/src/domain/: Domain.h  DomainConvert.cpp  DomainConvert.h  DomainJson.cpp  DomainJson.h
Aufgabenerstellungsgrammatik/src/ir/: IR.h  IRBuilder.cpp  IRBuilder.h
Aufgabenerstellungsgrammatik/usage/input/: example0.txt  example_old.txt
